# swclib

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
api/data/: index.html
api/whole_brain/: index.html
docs/: index.md  install.md  quickstart.md
docs/api/: data.md  image.md  metrics.md  whole_brain.md
docs/tutorial/: data.md  image.md  metrics.md  whole_brain.md
quickstart/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/image/: index.html
site/api/metrics/: index.html
site/api/whole_brain/: index.html
site/install/: index.html
site/tutorial/data/: index.html
site/tutorial/image/: index.html
site/tutorial/metrics/: index.html
site/tutorial/whole_brain/: index.html
swclib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
swclib/data/: euclidean_point.py  swc.py  swc_fiber.py  swc_forest.py  swc_node.py  swc_soma.py  swc_tree.py
swclib/image/: mask2swc.py  swc2mask.py
swclib/metrics/: fiber_metric.py  keypoint_metric.py  length_metric.py  manager.py  point_metric.py  ssd_metric.py
swclib/utils/: json.py  nx.py  points.py
swclib/whole_brain/: swc_reader.py  tifreader.py
test/: metric_fiber.py  metric_length.py  soma_draw_mask.py  soma_extract.py  soma_refine.py
test/data/images/: test_mask.swc
test/data/swcs/: anno3_refined_soma.swc  output_mask.swc  output_mask_r1.swc  output_r0.1.swc  soma.swc  soma2.swc
test/data/visualize_fiber/: fiber10_iou0.7915_gold.swc  fiber10_iou0.7915_pred.swc  fiber11_iou0.7921_gold.swc  (+123 more)
tutorial/whole_brain/: index.html
(+103 files in other folders)
